@@ -1,4 +1,5 @@
             Fix string index calculation when using some regexes (fix #1602)
+            Ensure Function.replaceWith puts scope after parameters (fix #1601)
 
      2v01 : ESP32: update to esp-idf V3.1
             Fix issues with Class Extends
